tdf#127109 Writer: fix Undo entry "Delete $1"

Regression from commit b69c518df68ce673b28d589da6626bd3d860f309
(tdf#54819 keep style & numbering at tracked deletion)

Change-Id: I3041cc5a70d00bea14d7be1c275bb7d2a22e768a